src/styles/modules/mobile-menu.less
.mobile-menu-container {
    position: fixed;
    z-index: 9;
    top: 0px;
    right: 0px;
    width: 250px;
    height: 100%;
    background: #4F4F4F;

    -webkit-transform: translateX(250px);
    transform: translateX(250px);

    -webkit-transition: -webkit-transform 0.5s ease;
    transition: transform 0.5s ease;

    ul, li {
        list-style: none;
        margin: 0px;
        padding: 0px;
    }

    li {
        border-top: 1px solid #666;
        border-left-width: 4px;
        border-left-style: solid;
        &.blue {
            border-left-color: @blue;
        }
        &.green {
            border-left-color: @green;
        }
        &.red {
            border-left-color: @red;
        }
        &.teal {
            border-left-color: @teal;
        }
        &.purple {
            border-left-color: @purple;
        }

        &.is-active {
            background: #ddd;
            a {
                color: #4F4F4F !important;
                &:hover {
                    background: inherit;
                }
            }
        }
    }

    a {
        font-size: 18px;
        color: #fff !important;
        padding: 15px 10px;
        display: inline-block;
        width: 100%;

        &:hover {
            background: #666;
            text-decoration: none;
        }

        .icon {
            float: left;
            width: 30px;
            margin-right: 10px;
            .sprite {
                margin: 0px auto;
            }
        }
        .link-label {
            margin-top: 4px;
            display: inline-block;
        }
    }

    .close-mobile-menu {
        float: left;
        clear: both;
        width: 100%;
        height: 60px;
        background: linear-gradient(to bottom, #323232 0, #4F4F4F 100%);
        text-align: right;
        padding-top: 18px;
    }

    @media screen and (max-width: @screen-xs-max) and (orientation: landscape) { // Phone Landscape
        width: 420px;
        -webkit-transform: translateX(420px);
        transform: translateX(420px);

        ul {
            width: 210px;
            &.landscape-col-left {
                float: left;
            }
            &.landscape-col-right {
                float: right;
            }
        }
    }
}

.app-container {
    -webkit-transform: translateX(0px);
    transform: translateX(0px);

    -webkit-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

.mobile-menu-open {
    position: fixed;
    cursor: default;

    .app-container {
        .opacity(0.2);
        -webkit-transform: translateX(-250px);
        transform: translateX(-250px);
    }

    .mobile-menu-container {
        -webkit-transform: translateX(0px);
        transform: translateX(0px);
    }
}

// Phone
@media screen and (min-width: @screen-xs-max) {
    .mobile-menu-container {
        display: none;
    }
}

